<resources>
    <string name="app_name">Fair Feed Reddit</string>
    <string name="title_reddit_posts">Home Feed</string>
    <string name="title_bookmarks">Bookmarks</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_to_reddit_account">Login to Reddit</string>
    <string name="reddit_icon">Reddit Icon</string>
    <string name="reddit_client_id">gv6KGFG2ZRc7CA</string>
    <string name="reddit_redirect_url">http://www.example.com/my_redirect</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="logout_account_key" translatable="false">logout_account</string>
    <string name="logout_account_title" translatable="false">Logout of reddit</string>
    <string name="clear_bookmarked_posts_key" translatable="false">clear_bookmarked_posts</string>
    <string name="clear_bookmarked_posts_title" translatable="false">Clear all bookmarked posts</string>
    <string name="clear_show_less_often_key" translatable="false">clear_show_less_often</string>
    <string name="clear_show_less_often_title" translatable="false">Clear subreddits</string>
    <string name="show_less_often_posts_key" translatable="false">show_less_often_posts</string>
    <string name="show_less_often_posts_title" translatable="false">Number of visible posts per day</string>
    <string name="clear_bookmarks_message" translatable="false">Are you sure you want to clear all the bookmarked reddit posts?</string>
    <string name="logout_message" translatable="false">Are you sure you want to logout of your reddit account?</string>
    <string name="clear_show_less_often_message" translatable="false">Are you sure you want to clear \'show less often\' for all your subreddits?</string>
    <string name="title_subreddits" translatable="false">Subreddits</string>
    <string name="title_activity_testing" translatable="false">Testing</string>
    <string name="search_query_hint" translatable="false">Search…</string>
    <string name="search_subreddits_query_hint" translatable="false">Search subreddits…</string>
    <string name="subreddit_actions_imagebutton" translatable="false">Subreddit Actions ImageButton</string>
    <string name="all" translatable="false">All</string>
    <string name="show_less_often">Show Less Often</string>
    <string name="show_less_often_action" translatable="false">Show less often</string>
    <string name="go_to_subreddit_action" translatable="false">Go to \'r/%s\'</string>
    <string name="leave_subreddit_action" translatable="false">Leave \'r/%s\'</string>
    <string name="show_more_often_action" translatable="false">Show more often</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="no_show_less_often_subreddits" translatable="false">No \'show less often\' subreddits.</string>
    <string name="check_internet" translatable="false">Check your internet connection and Retry.</string>
    <string name="error_message" translatable="false">Error Occurred. Please Retry Again.</string>
    <string name="bookmarks_cleared" translatable="false">All bookmarked posts have been cleared!!!</string>
    <string name="show_less_often_subreddits_cleared" translatable="false">\'show less often\' subreddits have been cleared!</string>
    <string name="reddit_post_actions_imagebutton" translatable="false">Reddit Post Actions ImageButton</string>
    <string name="reddit_post_thumbnail" translatable="false">Reddit Post Thumbnail</string>
    <string name="open_reddit_post" translatable="false">Open reddit post</string>
    <string name="add_post_to_bookmarks" translatable="false">Add post to bookmarks</string>
    <string name="leave_subreddit_message" translatable="false">Successfully left \'r/%s\'.</string>
    <string name="remove_post_from_bookmarks" translatable="false">Remove post from Bookmarks</string>
    <string name="no_bookmarks" translatable="false">No bookmarked posts.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="reddit_post_dummy_text">Android news, reviews, tips, and discussions about rooting, tutorials, and apps. Generic discussion about phones/tablets is allowed, but technical-support and carrier-related issues should be asked in their respective subreddits!</string>
    <string name="bottom_divider_between_bookmarks">Bottom divider between bookmarks</string>
    <string name="leave_subreddit">Leave</string>
    <string name="join_subreddit">Join</string>
</resources>
