<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Show Less Often">
        <ListPreference
            app:key="@string/show_less_often_posts_key"
            app:title="@string/show_less_often_posts_title"
            app:defaultValue="5"
            app:entries="@array/show_less_often_entries"
            app:entryValues="@array/show_less_often_values"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_list_black_24dp"/>

        <Preference
            app:icon="@drawable/ic_clear_black_24dp"
            app:key="@string/clear_show_less_often_key"
            app:title="@string/clear_show_less_often_title"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Bookmarks">
        <Preference
            app:icon="@drawable/ic_clear_black_24dp"
            app:key="@string/clear_bookmarked_posts_key"
            app:title="@string/clear_bookmarked_posts_title"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Account">
        <Preference
            app:icon="@drawable/ic_account_circle_black_24dp"
            app:key="@string/logout_account_key"
            app:title="@string/logout_account_title"/>
    </PreferenceCategory>

</PreferenceScreen>
