<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/reddit_post_thumbnail_iv"
        android:layout_width="@dimen/thumbnail_size"
        android:layout_height="@dimen/thumbnail_size"
        android:scaleType="centerCrop"
        android:layout_marginStart="10dp"
        android:background="#cccccc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        android:contentDescription="@string/reddit_post_thumbnail" />

    <TextView
        android:id="@+id/reddit_post_text_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/textDarkPrimary"
        tools:text="@string/reddit_post_dummy_text"
        app:layout_constraintStart_toEndOf="@id/reddit_post_thumbnail_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reddit_post_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textStyle="bold"
        tools:text="r/android  *  reddit_user_007  *  7d"
        app:layout_constraintEnd_toEndOf="@id/reddit_post_text_tv"
        app:layout_constraintStart_toStartOf="@id/reddit_post_text_tv"
        app:layout_constraintTop_toBottomOf="@id/reddit_post_text_tv"/>

    <ImageButton
        android:id="@+id/reddit_post_actions_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/reddit_post_actions_imagebutton"
        android:src="@drawable/ic_more_horiz_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reddit_post_title_tv"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="#cecece"
        app:layout_constraintTop_toBottomOf="@id/reddit_post_actions_ib"/>
</androidx.constraintlayout.widget.ConstraintLayout>